--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -82,16 +82,15 @@ RUN set -eux \
   ; build_dir=/root/build \
   ; mkdir -p $build_dir \
   \
-  #; cd $build_dir \
-  #; git clone https://github.com/jaiminpan/pg_jieba \
-  #; cd pg_jieba \
-  #; git submodule update --init --recursive  \
-  #; mkdir build \
-  #; cd build \
-  #; cmake .. \
-  #    -DPostgreSQL_TYPE_INCLUDE_DIR=/usr/include/postgresql/${PG_MAJOR}/server \
-  #; make \
-  #; make install \
+  ; cd $build_dir \
+  ; git clone https://github.com/jaiminpan/pg_jieba \
+  ; cd pg_jieba \
+  ; git submodule update --init --recursive  \
+  ; mkdir build \
+  ; cd build \
+  ; cmake .. -DPostgreSQL_TYPE_INCLUDE_DIR=/usr/include/postgresql/${PG_MAJOR}/server \
+  ; make \
+  ; make install \
   \
   ; cd $build_dir \
   ; curl -sSLO https://packages.groonga.org/debian/groonga-apt-source-latest-bullseye.deb \
