--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -17,6 +17,11 @@ http {
 
     gzip  on;
 
+    log_format timed_combined '$remote_addr - $remote_user [$time_local] '
+    '$request_time $upstream_response_time $pipe '
+    '"$request" $status $body_bytes_sent '
+    '"$http_referer" "$http_user_agent"';
+
     js_import bin.js;
 
     server {
@@ -41,7 +46,7 @@ http {
         client_max_body_size  10m;
 
         resolver $ngx_resolver;
-        #access_log  /var/log/nginx/host.access.log  main;
+        access_log  /var/log/nginx/access.log  timed_combined;
 
         location ~* /bin/(.*) {
             set $op $1;
