--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -17,10 +17,19 @@ http {
 
     gzip  on;
 
-    log_format timed_combined '$remote_addr - $remote_user [$time_local] '
-    '$request_time $upstream_response_time $pipe '
-    '"$request" $status $body_bytes_sent '
-    '"$http_referer" "$http_user_agent"';
+    log_format apm 'time=$time_iso8601 client=$remote_addr '
+               'method=$request_method uri=$request_uri proto=$server_protocol '
+               'req_len=$request_length '
+               'req_time=$request_time '
+               'stat=$status sent=$bytes_sent '
+               'body_sent=$body_bytes_sent '
+               'referer=$http_referer '
+               'ua="$http_user_agent" '
+               'us_addr=$upstream_addr '
+               'us_status=$upstream_status '
+               'ust_res=$upstream_response_time '
+               'ust_conn=$upstream_connect_time '
+               'ust_header=$upstream_header_time';
 
     js_import bin.js;
 
@@ -46,7 +55,7 @@ http {
         client_max_body_size  10m;
 
         resolver $ngx_resolver;
-        access_log  /var/log/nginx/access.log  timed_combined;
+        access_log  /var/log/nginx/access.log   apm;
 
         location ~* /bin/(.*) {
             set $op $1;
