--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -55,7 +55,7 @@ http {
         client_max_body_size  10m;
 
         resolver $ngx_resolver;
-        access_log  /var/log/nginx/access.log   apm;
+        #access_log  /var/log/nginx/access.log   apm;
 
         location ~* /bin/(.*) {
             set $op $1;
@@ -66,6 +66,11 @@ http {
             autoindex on;
             autoindex_format json;
         }
+
+        # location / {
+        #     set $op "ok";
+        #     js_content bin.run;
+        # }
 
         location ~* /([0-9]+)/(.*) {
             proxy_pass http://127.0.0.1:$1/$2;
