nginx rm resolver

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -54,7 +54,7 @@ http {
         proxy_send_timeout    1800s;
         client_max_body_size  10m;
 
-        resolver $ngx_resolver;
+        #resolver 8.8.8.8;
         #access_log  /var/log/nginx/access.log   apm;
 
         location ~* /bin/(.*) {
