--- a/nginx/nchan/nginx.conf
+++ b/nginx/nchan/nginx.conf
@@ -49,16 +49,16 @@ http {
         #resolver $ngx_resolver;
         #access_log  /var/log/nginx/host.access.log  main;
 
-        location ~* /bin/(.*) {
+        location ~ /bin/(.*) {
             js_content env.bin;
         }
 
-        location ~* /sub-(.+) {
+        location ~ /sub-(.+) {
             nchan_subscriber;
             nchan_channel_id $1;
         }
 
-        location ~* /pub-(.+) {
+        location ~ /pub-(.+) {
             nchan_publisher;
             nchan_channel_id $1;
         }
@@ -68,7 +68,7 @@ http {
             autoindex_format json;
         }
 
-        location ~* /([0-9]+)/(.*) {
+        location ~ /([0-9]+)/(.*) {
             proxy_pass http://127.0.0.1:$1/$2;
         }
 
