--- a/ngx/config/nginx.conf
+++ b/ngx/config/nginx.conf
@@ -57,7 +57,7 @@ http {
         #resolver 8.8.8.8;
         #access_log  /var/log/nginx/access.log   apm;
 
-        location ~* /bin/(.*) {
+        location ~ /bin/(.*) {
             set $op $1;
             js_content bin.run;
         }
@@ -72,7 +72,7 @@ http {
         #     js_content bin.run;
         # }
 
-        location ~* /([0-9]+)/(.*) {
+        location ~ /([0-9]+)/(.*) {
             proxy_pass http://127.0.0.1:$1/$2;
         }
 
