--- a/node/nginx.conf
+++ b/node/nginx.conf
@@ -49,7 +49,7 @@ http {
         resolver $ngx_resolver;
         #access_log  /var/log/nginx/host.access.log  main;
 
-        location ~* /bin/(.*) {
+        location ~ /bin/(.*) {
             js_content env.bin;
         }
 
@@ -57,7 +57,7 @@ http {
             proxy_pass http://127.0.0.1:3000;
         }
 
-        location ~* /([0-9]+)/(.*) {
+        location ~ /([0-9]+)/(.*) {
             proxy_pass http://127.0.0.1:$1/$2;
         }
 
