--- a/.github/workflows/vue.yml
+++ b/.github/workflows/vue.yml
@@ -50,6 +50,6 @@ jobs:
           context: frontend
           file: frontend/vue.Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:vue
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v
           labels: ${{ steps.meta.outputs.labels }}
 
