--- a/.github/workflows/pyflink.yml
+++ b/.github/workflows/pyflink.yml
@@ -1,4 +1,4 @@
-name: build pulsar
+name: build pyflink
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -44,7 +44,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Build pulsar
+      - name: Build pyflink
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: java
