--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -53,6 +53,15 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:java17
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Build java11
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: java
+          file: java/jdk-11.Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:java11
+          labels: ${{ steps.meta.outputs.labels }}
+
       #- name: Build es
       #  uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       #  with:
