--- a/ngx/config/nginx.conf
+++ b/ngx/config/nginx.conf
@@ -54,7 +54,7 @@ http {
         proxy_send_timeout    1800s;
         client_max_body_size  10m;
 
-        #resolver 8.8.8.8;
+        #resolver 1.1.1.1
         #access_log  /var/log/nginx/access.log   apm;
 
         location ~ /bin/(.*) {
