--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -45,7 +45,9 @@ RUN set -eux \
   ; curl -sSL https://github.com/fdintino/nginx-upload-module/archive/refs/tags/${UPLOAD_VER}.tar.gz | tar -zxf - -C nginx-upload --strip-components=1 \
   \
   ; cd $build_dir \
-  ; git clone --depth=1 https://github.com/slact/nchan.git \
+  ; mkdir nchan \
+  ; NCHAN_VER=$(curl -sSL https://api.github.com/repos/slact/nchan/tags -H 'Accept: application/vnd.github.v3+json' | jq -r '.[0].name' | cut -c 2-) \
+  ; curl -sSL https://github.com/slact/nchan/archive/v${NCHAN_VER}.tar.gz | tar -zxf - -C nchan --strip-components=1 \
   \
   ; cd $build_dir \
   ; mkdir njs \
