--- a/envoy/Dockerfile
+++ b/envoy/Dockerfile
@@ -1,12 +1,8 @@
+FROM envoyproxy/envoy-distroless:v1.23-latest as envoy
 FROM fj0rd/io:base
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8 TIMEZONE=Asia/Shanghai
-ENV DEV_DEPS \
-        libpcre2-dev libssl-dev
-
-ENV BUILD_DEPS lsb-release software-properties-common build-essential git gnupg binutils
-
-ENV PATH=/opt/unit/sbin:$PATH
+ENV PATH=/opt/envoy/bin:$PATH
 ENV XDG_CONFIG_HOME=/etc
 
 RUN set -eux \
@@ -14,25 +10,18 @@ RUN set -eux \
   ; apt-get upgrade -y \
   ; DEBIAN_FRONTEND=noninteractive \
     apt-get install -y --no-install-recommends \
-    $DEV_DEPS $BUILD_DEPS s3fs \
+    $BUILD_DEPS s3fs \
   \
   ; git config --global pull.rebase false \
   ; git config --global init.defaultBranch main \
   ; git config --global user.name "unnamed" \
   ; git config --global user.email "unnamed@container" \
   \
-  ; git clone https://github.com/nginx/unit \
-  ; cd unit \
-  ; ./configure --state=config --log=log/unit.log \
-        --control=--control=127.0.0.1:88 --prefix=/opt/unit \
-  ; make \
-  ; make install \
-  ; cd .. \
-  ; rm -rf unit \
-  \
   ; apt-get -y remove ${BUILD_DEPS} \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
+COPY --from=envoy /usr/local /opt/envoy
+COPY envoy.yaml /
 COPY entrypoint.sh /entrypoint.sh
 #COPY reload-nginx /usr/local/bin
 WORKDIR /srv
@@ -43,4 +32,3 @@ EXPOSE 80 443
 ENTRYPOINT [ "/entrypoint.sh" ]
 
 ENV WEB_ROOT=
-ENV INSPECT_REQUEST=0
