--- a/.github/workflows/flink.yml
+++ b/.github/workflows/flink.yml
@@ -48,7 +48,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: flink
-          file: flink/pyflink.Dockerfile
+          file: flink/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:pyflink
           labels: ${{ steps.meta.outputs.labels }}
