--- a/deno/Dockerfile
+++ b/deno/Dockerfile
@@ -26,7 +26,7 @@ RUN set -eux \
   ; apt-get upgrade -y \
   ; DEBIAN_FRONTEND=noninteractive \
     apt-get install -y --no-install-recommends \
-      pwgen s3fs python3 python3-pip ipython3 \
+      pwgen python3 python3-pip ipython3 \
       # python3-dev python3-setuptools \
   ; pip3 --no-cache-dir install \
         # aiofile fastapi uvicorn \
@@ -70,9 +70,3 @@ RUN set -eux \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* \
   ;
 
-ENV S3ENDPOINT=
-ENV S3BUCKET=
-ENV S3MOUNTPOINT=
-ENV S3REGION=
-ENV S3ACCESS_KEY=
-ENV S3SECRET_KEY=
