--- a/unit/Dockerfile
+++ b/unit/Dockerfile
@@ -14,7 +14,7 @@ RUN set -eux \
   ; apt-get upgrade -y \
   ; DEBIAN_FRONTEND=noninteractive \
     apt-get install -y --no-install-recommends \
-    $DEV_DEPS $BUILD_DEPS s3fs \
+    $DEV_DEPS $BUILD_DEPS \
   \
   ; git config --global pull.rebase false \
   ; git config --global init.defaultBranch main \
