--- a/deno/Dockerfile
+++ b/deno/Dockerfile
@@ -41,6 +41,7 @@ RUN set -eux \
 #         dev         #
 #######################
 ENV NODE_ROOT=/opt/node
+ENV LS_ROOT=/opt/language-server
 ENV PATH=${NODE_ROOT}/bin:$PATH
 
 # '[.[]|select(.prerelease == false)][0].assets[].browser_download_url'
@@ -53,7 +54,7 @@ RUN set -eux \
   ; curl -sSL https://nodejs.org/dist/v${node_version}/node-v${node_version}-linux-x64.tar.xz \
     | tar Jxf - --strip-components=1 -C /opt/node \
   \
-  ; mkdir -p /opt/language-server \
+  ; mkdir -p ${LS_ROOT} \
   ; npm install --location=global \
         quicktype \
         pyright \
@@ -63,9 +64,9 @@ RUN set -eux \
   \
   ; lua_ls_url=$(curl -sSL https://api.github.com/repos/sumneko/lua-language-server/releases -H 'Accept: application/vnd.github.v3+json' \
                | jq -r '[.[]|select(.prerelease == false)][0].assets[].browser_download_url' | grep 'linux-x64') \
-  ; mkdir -p /opt/language-server/sumneko_lua \
+  ; mkdir -p ${LS_ROOT}/sumneko_lua \
   ; curl -sSL ${lua_ls_url} | tar zxf - \
-      -C /opt/language-server/sumneko_lua \
+      -C ${LS_ROOT}/sumneko_lua \
   \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* \
   ;
